--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     
     <div>
-      <p>世田谷区では、区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
+      <p>Setagayaでは、区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
     </div>
 
     <div class="title-wrapper">
@@ -72,7 +72,7 @@
         講師<br>
         栗和田 貴一（司法書士）
       </td>
-      <td>三茶しゃれなあどホール オリオン</td>
+      <td>City Hall</td>
     </tr>
     <tr>
       <td>2</td>
@@ -83,20 +83,20 @@
         講師<br>
         菊池 和貴（税理士）
       </td>
-      <td>世田谷区民会館「せたがやイーグレットホール」集会室</td>
+      <td>City Hall Conference Room</td>
     </tr>
     <tr>
       <td>3</td>
       <td>11月15日（土曜日）<br>午前開催予定</td>
       <td>未定</td>
-      <td>玉川区民会館「玉川せせらぎホール」集会室</td>
+      <td>City Hall Conference Room</td>
     </tr>
   </tbody>
     </table>
 
     <div>
       <p><strong>対象者・定員</strong></p>
-      <p>対象者：世田谷区在住・在勤・在学の方<br>第2回セミナーの定員：90名（事前予約制先着順）</p>
+      <p>対象者：在住・在勤・在学の方<br>第2回セミナーの定員：90名（事前予約制先着順）</p>
     </div>
 
     <div id="reiwa-2024" class="title-wrapper">
@@ -126,7 +126,7 @@
     </div>
 
     <div>
-      <p>上記セミナーと同日、同会場にて、公益社団法人全日本不動産協会東京都本部世田谷支部の宅地建物取引士、弁護士、税理士の専門家が30分間の個別相談に応じます。</p>
+      <p>上記セミナーと同日、同会場にて、公益社団法人全日本不動産協会東京都本部部の宅地建物取引士、弁護士、税理士の専門家が30分間の個別相談に応じます。</p>
     </div>
 
     <div id="audience" class="title-wrapper">
