--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     
     <div>
-      <p>Setagayaでは、区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
+      <p>Segatayaでは、区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
     </div>
 
     <div class="title-wrapper">
@@ -175,7 +175,7 @@
         <h2>お問い合わせ先</h2>
       </div>
       <div>
-        <p>都市整備政策部 居住支援課<br>電話番号：03-5432-2499<br>ファクシミリ：03-5432-3040</p>
+        <p>都市整備政策部 居住支援課<br>電話番号：00-0000-0000<br>ファクシミリ：00-0000-0000</p>
       </div>
     </div>
 
@@ -186,13 +186,13 @@
       <div class="others-info-links">
         <div>
           <p class="hover-liner">→ Information about family s</p>
-          <p>→ Setagaya Ward Vacant House </p>
+          <p>→ Segataya Ward Vacant House </p>
           <p>→ FY2025 "Living and Town Learning" </p>
         </div>
         <div>
-          <p>→ Setagaya Ward Housing Consultation</p>
+          <p>→ Segataya Ward Housing Consultation</p>
           <p>→ Other housing-related consultation services</p>
-          <p>→ Information on Setagaya and housing</p>
+          <p>→ Information on Segataya and housing</p>
         </div>
       </div>
     </div>
