--- a/index.html
+++ b/index.html
@@ -16,23 +16,27 @@
     </div>
 
     <div class="title">
-      <h2>令和7年度「住まい・まち学習」セミナー・相談会</h2>
+      <h1>令和7年度「住まい・まち学習」セミナー・相談会</h2>
     </div>
 
     <div class="contents-wrapper">
       <div class="contents">
         <h3>目次</h3>
           <ul>
-            <li><a href="#seminar">セミナー</li></a>
-            <ul>
+            <li><a href="#seminar">セミナー</a></li>
+          </ul>
+          <ul class="list-sub">
               <li><a href="#reiwa-2025">令和7年度開催内容</a></li>
               <li><a href="#reiwa-2024">令和6年度開催内容</a></li>
-            </ul>
-              <li><a href="#consultation">不動産無料相談会</a></li>
-            <ul>
+          </ul>
+          <ul>
+            <li><a href="#consultation">不動産無料相談会</a></li>
+          </ul>
+          <ul class="list-sub">
               <li><a href="#audience">対象者・定員</a></li>
               <li><a href="#cases">主な相談事例</a></li>
-            </ul>
+          </ul>
+          <ul>
             <li><a href="#apply">セミナー・相談会の申込について</a></li>
             <li><a href="#links">関連リンク</a></li>
           </ul>
@@ -44,7 +48,7 @@
     </div>
     
     <div>
-      <p>Segatayaでは、区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
+      <p>区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
     </div>
 
     <div class="title-wrapper">
@@ -68,35 +72,33 @@
       <td>7月4日（金曜日）</td>
       <td>
         セミナーテーマ<br>
-        「司法書士が教える!遺言の書き方ポイントと本当にあったトラブル事例」<br>
-        講師<br>
-        栗和田 貴一（司法書士）
+        「遺言の書き方ポイントと本当にあったトラブル事例」
       </td>
-      <td>City Hall</td>
+      <td>ホール オリオン</td>
     </tr>
     <tr>
       <td>2</td>
-      <td>10月2日（木曜日）</td>
+      <td>10月2日（木曜日）</td>z
       <td>
         セミナーテーマ<br>
         「相続対策のすすめ」<br>
         講師<br>
-        菊池 和貴（税理士）
+        （税理士）
       </td>
-      <td>City Hall Conference Room</td>
+      <td>民会館「イーグレットホール」集会室</td>
     </tr>
     <tr>
       <td>3</td>
       <td>11月15日（土曜日）<br>午前開催予定</td>
       <td>未定</td>
-      <td>City Hall Conference Room</td>
+      <td>民会館「ホール」集会室</td>
     </tr>
   </tbody>
     </table>
 
     <div>
       <p><strong>対象者・定員</strong></p>
-      <p>対象者：在住・在勤・在学の方<br>第2回セミナーの定員：90名（事前予約制先着順）</p>
+      <p class="p-no-indent">対象者：在勤・在学の方<br>第2回セミナーの定員：90名（事前予約制先着順）</p>
     </div>
 
     <div id="reiwa-2024" class="title-wrapper">
@@ -126,7 +128,7 @@
     </div>
 
     <div>
-      <p>上記セミナーと同日、同会場にて、公益社団法人全日本不動産協会東京都本部部の宅地建物取引士、弁護士、税理士の専門家が30分間の個別相談に応じます。</p>
+      <p>上記セミナーと同日、同会場にて、弁護士、税理士の専門家が30分間の個別相談に応じます。</p>
     </div>
 
     <div id="audience" class="title-wrapper">
@@ -136,7 +138,7 @@
     </div>
 
     <div>
-      <p>対象者：世田谷区在住・在勤・在学の方<br>第2回相談会の定員：40組<br>各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）<br>相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで<br>(3)14時50分から15時20分まで(4)15時30分から16時00分まで<br>(5)16時10分から16時40分まで<br></p>
+      <p>対象者：在住・在勤・在学の方<br>第2回相談会の定員：40組<br>各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）<br>相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで<br>(3)14時50分から15時20分まで(4)15時30分から16時00分まで<br>(5)16時10分から16時40分まで<br></p>
     </div>
 
     <div>
@@ -163,11 +165,11 @@
     <h2 class="title-with-lines">/  添付ファイル</h2>
     <ul>    
       <li><span class="icon-box">PDF</span> <a href="images/setagaya-chirashi.pdf"> 令和7年度住まい・まち学習第2回チラシ (PDF：383KB)</a></li>
-      （ 📄 代替ファイル（テキスト：2KB））
     </ul>
-      <h2 id="links" class="title-with-lines">/  関連リンク</h2>
+      <p>（ 📄 代替ファイル（テキスト：2KB））</p>
+    <h2 id="links" class="title-with-lines">/  関連リンク</h2>
     <ul>    
-      <li>世田谷区住宅相談</li>
+      <li>住宅相談</li>
     </ul>
 
     <div class="info-box">
@@ -175,7 +177,7 @@
         <h2>お問い合わせ先</h2>
       </div>
       <div>
-        <p>都市整備政策部 居住支援課<br>電話番号：00-0000-0000<br>ファクシミリ：00-0000-0000</p>
+        <p class="p-no-indent">都市整備政策部 居住支援課<br>電話番号：00-0000-0000<br>ファクシミリ：00-0000-0000</p>
       </div>
     </div>
 
@@ -186,13 +188,13 @@
       <div class="others-info-links">
         <div>
           <p class="hover-liner">→ Information about family s</p>
-          <p>→ Segataya Ward Vacant House </p>
+          <p>→ Vacant Houses </p>
           <p>→ FY2025 "Living and Town Learning" </p>
         </div>
         <div>
-          <p>→ Segataya Ward Housing Consultation</p>
+          <p>→ Housing Consultation</p>
           <p>→ Other housing-related consultation services</p>
-          <p>→ Information on Segataya and housing</p>
+          <p>→ Information on Setagaya and housing</p>
         </div>
       </div>
     </div>
