--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="img-box">
-      <img src="images/setagaya-2024.jpg" alt="scene from the seminar" class="img-seminar">
+      <img src="images/setagaya-2024.webp" alt="scene from the seminar" class="img-seminar">
       <div>
       <p class="img-text">セミナーの様子</p>
       </div>
