--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <section class="wrap">
     <div id="seminar" class="subtitle">
       <h2>セミナー</h2>
-      <p class="mt-4">区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
     </div>
+      <p class="mt-4">区民主体の住まい・まちづくりをめざして、「自分たちの住環境を知り・考え・創っていく」をテーマにした講座を行っています。</p>
 
     <div class="title-wrapper">
       <div class="subtitle-small">
@@ -142,14 +142,13 @@
       </div>
     </div>
 
-    <div> <!--"add class" -->
-    
-      <p>対象者：在住・在勤・在学の方</p>
-      <p>第2回相談会の定員：40組</p>
-      <p>各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）</p>
-      <p>相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで</p>  
-      <p>(3)14時50分から15時20分まで(4)15時30分から16時00分まで</p>
-      <p>(5)16時10分から16時40分まで</p>
+    <div class="eligibility"> 
+      <p class="p-short">対象者：在住・在勤・在学の方</p>
+      <p class="p-short">第2回相談会の定員：40組</p>
+      <p class="p-short">各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）</p>
+      <p class="p-short">相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで</p>  
+      <p class="p-short">(3)14時50分から15時20分まで(4)15時30分から16時00分まで</p>
+      <p class="p-short">(5)16時10分から16時40分まで</p>
     </div>
 
       <div id="cases" class="title-wrapper">
@@ -193,7 +192,8 @@
       </div>
     </div>
     </section>
-  
+
+  <section class="wrap">
     <div class="info-box">
       <div class="others-info-title">
         <p class="hover-liner">住まいに関する情報・相談・セミナー</p>
@@ -211,6 +211,8 @@
         </div>
       </div>
     </div>
+  </section>
+
   </section>
       </main>
       <footer> 
