--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </header>
 
     <main>
-      <section class="wrap"
+      <section class="wrap">
         <div class="page-info">
           <span>最終更新日 2025年10月3日</span>
           <span>ページID 3740</span>
         </div>
-
+        
         <div class="title">
           <h1>令和7年度「住まい・まち学習」セミナー・相談会</h1>
         </div>
@@ -42,7 +42,7 @@
 								</ul>
 								</li>
 							<li><a href="#apply">セミナー・相談会の申込について</a></li>
-              <li><a href="#attachments">添付ファイル</a></li>          
+              <li><a href="#attachment">添付ファイル</a></li>          
 							<li><a href="#links">関連リンク</a></li>
 						</ul>
           </div>
@@ -143,12 +143,12 @@
     </div>
 
     <div class="eligibility"> 
-      <p class="p-short">対象者：在住・在勤・在学の方</p>
-      <p class="p-short">第2回相談会の定員：40組</p>
-      <p class="p-short">各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）</p>
-      <p class="p-short">相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで</p>  
-      <p class="p-short">(3)14時50分から15時20分まで(4)15時30分から16時00分まで</p>
-      <p class="p-short">(5)16時10分から16時40分まで</p>
+      <p >対象者：在住・在勤・在学の方</p>
+      <p >第2回相談会の定員：40組</p>
+      <p >各専門家（宅地建物取引士（2名）、弁護士（3名）、税理士（3名））が下記相談枠で個別相談に応じます。（事前予約制先着順）</p>
+      <p >相談枠 (1)13時30分から14時00分まで(2)14時10分から14時40分まで</p>  
+      <p >(3)14時50分から15時20分まで(4)15時30分から16時00分まで</p>
+      <p >(5)16時10分から16時40分まで</p>
     </div>
 
       <div id="cases" class="title-wrapper">
@@ -171,12 +171,12 @@
       <p class="p-no-indent">※セミナー、相談会ともに事前予約制です。<br>現在、セミナー、相談会の予約受付は行っておりません。<br>次回の予約受付の開始をお待ちください。<br></p>
     </div>
         
-    <h2 class="title-with-lines">/ 添付ファイル</h2>
+    <h3 id="attachment" class="title-with-lines">/ 添付ファイル</h3>
     <ul>    
       <li><span class="icon-box">PDF</span> <a href="images/setagaya-chirashi.pdf"> 令和7年度住まい・まち学習第2回チラシ (PDF：383KB)</a></li>
     </ul>
       <p>（ 📄 代替ファイル（テキスト：2KB））</p>
-      <p id="links" class="title-with-lines">/  関連リンク</p>
+    <h3 id="links" class="title-with-lines">/  関連リンク</h3>
     <ul>    
       <li>住宅相談</li>
     </ul>
