--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="header-wrapper">
             <section class="wrap">
                 <div class="header">
                     <div class="logo">
