--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <div style="display: flex;">
                             <button class="emergency-btn">
-                                <svg
+                                <svg class="emergency-icon"
                                     width="30px"
                                     height="30px"
                                     viewbox="0 0 24 24"
