--- a/index.html
+++ b/index.html
@@ -372,17 +372,17 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
             <div class="logo-footer">
                 <img class="logo-footer-icon" img="img" src="images/logo-white.svg">
                 <div class="logo-footer-text">
-                    <h3>世田谷区</h3>
-                    <h4>SETAGAYA CITY</h4>
+                    <h3>田田田田</h3>
+                    <h4>SAGATAYA CITY</h4>
                 </div>
-                <span class="corporate-numb">法人番号 1000020131121</span>
+                <span class="corporate-numb">法人番号 1000000000000</span>
             </div>
-            <p class="footer-text">〒154-8504 東京都世田谷区世田谷4丁目21番27号.
+            <p class="footer-text">〒000-8504 東京都田田田田田田谷4丁目00番00号.
                 <span class="hover-liner-footer">
                     <span class="arrow-footer"></span>
                     このサイトについて</span>
-                <p class="footer-text">電話番号 03-5432-1111(代表)</p>
-                <p class="footer-text">ファクシミリ 03-5432-3001（広報広聴課）</p>
+                <p class="footer-text">電話番号 00-0000-0000(代表)</p>
+                <p class="footer-text">ファクシミリ 00-0000-000（広報広聴課）</p>
             </div>
             <div class="footer-white-box">
             <div class="contact">
@@ -396,8 +396,8 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
             <div class="footer-contact-info">
                 <p class="p-white-box">年中無休　午前8時から午後9時まで</p>
-                <p class="p-white-box">電話番号 03-5432-3333</p>
-                <p class="p-white-box">ファクシミリ 03-5432-3100
+                <p class="p-white-box">電話番号 00-000-0000</p>
+                <p class="p-white-box">ファクシミリ 00-0000-0000
                 <span class="hover-liner"><span class="arrow"></span>入力フォーム</span>
             </div>
 
