--- a/index.html
+++ b/index.html
@@ -406,29 +406,35 @@
         </div>
         
         <div class="autoplay">
-          <div class="carousel-item">
-                <div class="carousel-image"><img src="images/Slide.jpg" alt="Slide 1"></div>
-                <p class="hover-liner">Placeholder for Carousel</p>
+        <div class="carousel-item">
+            <div class="carousel-image">
+                <img src="images/Slide.jpg" alt="Slide 1">
             </div>
-
-          <div class="autoplay">
-            <div class="carousel-item">
-                <div class="carousel-image"><img src="images/Slide 2.jpg" alt="Slide 1"></div>
-                <p class="hover-liner">Placeholder for Carousel</p>
-            </div>
-
-          <div class="autoplay">
-            <div class="carousel-item">
-                <div class="carousel-image"><img src="images/Slide 3.jpg" alt="Slide 1"></div>
-                <p class="hover-liner">Placeholder for Carousel</p>
-            </div>
-
-          <div class="autoplay">
-            <div class="carousel-item">
-                <div class="carousel-image"><img src="images/Slide 4.jpg" alt="Slide 1"></div>
-                <p class="hover-liner">Placeholder for Carousel</p>
-            </div>
+            <p class="hover-liner">Placeholder for Carousel</p>
         </div>
+
+        <div class="carousel-item">
+            <div class="carousel-image">
+                <img src="images/Slide 2.jpg" alt="Slide 2">
+            </div>
+            <p class="hover-liner">Placeholder for Carousel</p>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-image">
+                <img src="images/Slide 3.jpg" alt="Slide 3">
+            </div>
+            <p class="hover-liner">Placeholder for Carousel</p>
+        </div>
+
+        <div class="carousel-item">
+            <div class="carousel-image">
+                <img src="images/Slide 4.jpg" alt="Slide 4">
+            </div>
+            <p class="hover-liner">Placeholder for Carousel</p>
+        </div>
+    </div>
+</div>
 
 </div> 
 </section>
