--- a/index.html
+++ b/index.html
@@ -408,28 +408,28 @@
         <div class="autoplay">
         <div class="carousel-item">
             <div class="carousel-image">
-                <img src="images/Slide.jpg" alt="Slide 1">
+                <img src="images/Slide.jpg" alt="Slide">
             </div>
             <p class="hover-liner">Placeholder for Carousel</p>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-image">
-                <img src="images/Slide 2.jpg" alt="Slide 2">
+                <img src="images/Slide-2.jpg" alt="Slide">
             </div>
             <p class="hover-liner">Placeholder for Carousel</p>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-image">
-                <img src="images/Slide 3.jpg" alt="Slide 3">
+                <img src="images/Slide-3.jpg" alt="Slide">
             </div>
             <p class="hover-liner">Placeholder for Carousel</p>
         </div>
 
         <div class="carousel-item">
             <div class="carousel-image">
-                <img src="images/Slide 4.jpg" alt="Slide 4">
+                <img src="images/Slide-4.jpg" alt="Slide">
             </div>
             <p class="hover-liner">Placeholder for Carousel</p>
         </div>
