--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link href="styles/style.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- memo3:⬇︎不要、scriptは</body>の前に記述 -->
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+	
+	<!-- memo3:⬇︎style.cssは一番下に -->
+	<link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -400,41 +403,58 @@
         </div>
     </div>
     <div class="popup-carousel">
-        <div class="popup-carousel-title">
-        <h2>世田谷区を知る</h2>
-        <p>Learn about Setagaya City</p>
-        </div>
-        
-        <div class="autoplay">
-        <div class="carousel-item">
-            <div class="carousel-image">
-                <img src="images/Slide.jpg" alt="Slide">
-            </div>
-            <p class="hover-liner">Placeholder for Carousel</p>
-        </div>
+			<div class="popup-carousel-title">
+				<h2>世田谷区を知る</h2>
+				<p>Learn about Setagaya City</p>
+			</div>
 
-        <div class="carousel-item">
-            <div class="carousel-image">
-                <img src="images/Slide-2.jpg" alt="Slide">
-            </div>
-            <p class="hover-liner">Placeholder for Carousel</p>
-        </div>
+			<div class="SlickAutoplay">
+				<!-- memo3:⬇︎carousel-itemはbootstrapのクラスにあるので_に変更 -->
+				<div class="SlickCarouselItem">
+					<div class="d-flex">
+						<div class="SlickCarouselImage">
+							<img src="images/Slide.jpg" alt="Slide">
+						</div>
+						<div class="SlickCarouselText d-flex justify-content-center align-items-center">
+							<p class="hover-liner">Placeholder for Carousel</p>
+						</div>
+					</div>
+				</div>
 
-        <div class="carousel-item">
-            <div class="carousel-image">
-                <img src="images/Slide-3.jpg" alt="Slide">
-            </div>
-            <p class="hover-liner">Placeholder for Carousel</p>
-        </div>
+				<div class="SlickCarouselItem">
+					<div class="d-flex">
+						<div class="SlickCarouselImage">
+							<img src="images/Slide-2.jpg" alt="Slide">
+						</div>
+						<div class="SlickCarouselText d-flex justify-content-center align-items-center">
+							<p class="hover-liner">Placeholder for Carousel</p>
+						</div>
+					</div>
+				</div>
 
-        <div class="carousel-item">
-            <div class="carousel-image">
-                <img src="images/Slide-4.jpg" alt="Slide">
-            </div>
-            <p class="hover-liner">Placeholder for Carousel</p>
-        </div>
-    </div>
-</div>
+				<div class="SlickCarouselItem">
+					<div class="d-flex">
+						<div class="SlickCarouselImage">
+							<img src="images/Slide-3.jpg" alt="Slide">
+						</div>
+						<div class="SlickCarouselText d-flex justify-content-center align-items-center">
+							<p class="hover-liner">Placeholder for Carousel</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="SlickCarouselItem">
+					<div class="d-flex">
+						<div class="SlickCarouselImage">
+							<img src="images/Slide-4.jpg" alt="Slide">
+						</div>
+						<div class="SlickCarouselText d-flex justify-content-center align-items-center">
+							<p class="hover-liner">Placeholder for Carousel</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 </div> 
 </section>
