--- a/index.html
+++ b/index.html
@@ -225,50 +225,53 @@
         </div>
     </div>
 
-    <table id="reiwa-2025" class="schedule-table">
-        <thead>
-            <tr>
-                <th>回</th>
-                <th>開催日時</th>
-                <th>セミナーテーマ<br>講師</th>
-                <th>会場</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <strong>1</strong>
-                </td>
-                <td>7月4日（金曜日）</td>
-                <td>
-                    セミナーテーマ<br>
-                    「遺言の書き方ポイントと本当にあったトラブル事例」
-                </td>
-                <td>ホール オリオン</td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>2</strong>
-                </td>
-                <td>10月2日（木曜日）</td>
-                <td>
-                    セミナーテーマ<br>
-                    「相続対策のすすめ」<br>
-                    講師<br>
-                    （税理士）
-                </td>
-                <td>民会館「イーグレットホール」集会室</td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>3</strong>
-                </td>
-                <td>11月15日（土曜日）<br>午前開催予定</td>
-                <td>未定</td>
-                <td>民会館「ホール」集会室</td>
-            </tr>
-        </tbody>
-    </table>
+		<!-- memo3:⬇︎追加 -->
+		<div id="reiwa-2025" class="scroll-table">
+			<table class="schedule-table">
+					<thead>
+							<tr>
+									<th>回</th>
+									<th>開催日時</th>
+									<th>セミナーテーマ<br>講師</th>
+									<th>会場</th>
+							</tr>
+					</thead>
+					<tbody>
+							<tr>
+									<td>
+											<strong>1</strong>
+									</td>
+									<td>7月4日（金曜日）</td>
+									<td>
+											セミナーテーマ<br>
+											「遺言の書き方ポイントと本当にあったトラブル事例」
+									</td>
+									<td>ホール オリオン</td>
+							</tr>
+							<tr>
+									<td>
+											<strong>2</strong>
+									</td>
+									<td>10月2日（木曜日）</td>
+									<td>
+											セミナーテーマ<br>
+											「相続対策のすすめ」<br>
+											講師<br>
+											（税理士）
+									</td>
+									<td>民会館「イーグレットホール」集会室</td>
+							</tr>
+							<tr>
+									<td>
+											<strong>3</strong>
+									</td>
+									<td>11月15日（土曜日）<br>午前開催予定</td>
+									<td>未定</td>
+									<td>民会館「ホール」集会室</td>
+							</tr>
+					</tbody>
+			</table>
+		</div>
 
     <div class="target-capacity">
         <p class="m-0">
@@ -459,8 +462,13 @@
 </div> 
 </section>
 </main>
- <a href="#top" class="home-button"><svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" fill="#fefefe" stroke= "#002060" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
-  <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/></svg>
+ <a href="#top" class="home-button">
+	<!-- <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" fill="#fefefe" stroke= "#002060" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+  <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/></svg> -->
+	<!-- memo3:⬇︎bootstrap iconより -->
+	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+		<path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+	</svg>
  </a>  
 
 <footer>
